# vla-so101

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: record_10cm.yaml  record_30cm.yaml
scripts/: camera_preview.py  infer.py  record.py  record.sh  train.py  train.sh
